--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li>Learning Git and GitHub</li>
             <li>Creating simple web pages</li>
-            <li>Learning to work with code versions</li>
+            <li>Learning to work with code versions.</li>
         </ul>
         
         <p>Date created: <span id="date"></span></p>
