--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello! I'm learning Git</h1>
+        <h1>Hello! I'm learning to use Git</h1>
         <div class="photo"></div>
         <p>This is my first website created with GitHub!</p>
         <p>Here I will share my projects and my experience learning programming.</p>
@@ -20,7 +20,7 @@
         <ul>
             <li>Learning Git and GitHub</li>
             <li>Creating simple web pages</li>
-            <li>Learning to work with code versions.</li>
+            <li>Learning to work with code versions</li>
         </ul>
         
         <p>Date created: <span id="date"></span></p>
